# confluence_markdown

./: .gitignore  ALTERNATIVES.md  CONTENT_TYPES.md  CREATE_PAGES.md  FZF_WORKFLOW.md  README.md  TODO.md  UNIFIED.md  blub.txt  confluence-create.sh  confluence-fzf.sh  confluence_markdown_tool.py  example_usage.py  main.py  pyproject.toml  test_script.py  yay.md
legacy/: README.md  confluence-create-fzf-only.sh.backup  confluence-create-simple.sh  confluence-fzf-backup.sh  confluence-new.sh
legacy/docs/: CHANGELOG.md  CLAUDE.md  PAGINATION.md
src/confluence_markdown/: __init__.py  cli.py  client.py  config.py  main.py
templates/: documentation.md  meeting-notes.md  project-plan.md
tests/: __init__.py  test_main.py
