[project]
name = "confluence-markdown"
version = "0.1.0"
description = "A tool to download, read, and update Confluence Data Center pages with markdown support"
readme = "README.md"
license = "WTFPL"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "markdownify>=0.11.6",
    "beautifulsoup4>=4.12.0",
    "markdown>=3.4.0",
]

[project.scripts]
confluence-markdown = "confluence_markdown.main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
